[gd_scene load_steps=19 format=3 uid="uid://qqtwnrwa0h3f"]

[ext_resource type="Script" path="res://Scenes/Enemies/Type_1 (Spider)/enemy_1.gd" id="1_dtvsp"]
[ext_resource type="Texture2D" uid="uid://fba7j1kshw0h" path="res://Art/Sprites/enemy_1.png" id="2_ufmws"]
[ext_resource type="Texture2D" uid="uid://c7gsdp7q8ygwe" path="res://Art/Sprites/Bloodclot_sheet.png" id="3_ethav"]
[ext_resource type="Texture2D" uid="uid://g4honrywmyl0" path="res://Art/bloodstain.png" id="4_b43mb"]
[ext_resource type="Texture2D" uid="uid://dwniw2f7cfsre" path="res://Art/Sprites/murder1.png" id="5_olupe"]
[ext_resource type="AudioStream" uid="uid://bw6g05jdqu351" path="res://Sounds/ImpactFleshy.mp3" id="6_tx7o8"]
[ext_resource type="AudioStream" uid="uid://7cg8r2rs26hd" path="res://Sounds/MonsterNoises/BloodclotJump.mp3" id="7_g72no"]
[ext_resource type="AudioStream" uid="uid://d3f860nrq2juv" path="res://Sounds/MonsterNoises/BloodclotScreech.mp3" id="8_pqqr8"]
[ext_resource type="AudioStream" uid="uid://bif8tv0y1x82y" path="res://Sounds/MonsterNoises/BloodclotDeath.mp3" id="9_d68hl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dygdi"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nua7y"]
height = 12.4483
radius = 2.27267

[sub_resource type="SphereShape3D" id="SphereShape3D_waew8"]
radius = 0.696185

[sub_resource type="AtlasTexture" id="AtlasTexture_x5fbm"]
atlas = ExtResource("2_ufmws")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu30y"]
atlas = ExtResource("2_ufmws")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8icb"]
atlas = ExtResource("3_ethav")
region = Rect2(384, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdbku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5fbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu30y")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8icb")
}],
"loop": true,
"name": &"jump",
"speed": 12.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_wck3j"]
radius = 0.144672

[sub_resource type="SphereShape3D" id="SphereShape3D_w8jcp"]
radius = 5.17512

[node name="Enemy_1" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 8
collision_mask = 258
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource("1_dtvsp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_dygdi")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Player_Detect" type="Area3D" parent="."]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Detect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_nua7y")

[node name="Jump_Timer" type="Timer" parent="."]
one_shot = true

[node name="Weapon_Detect" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 8
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Weapon_Detect"]
shape = SubResource("SphereShape3D_waew8")

[node name="DmgTimer" type="Timer" parent="Weapon_Detect"]
one_shot = true

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2.29, 0, 0, 0, 2.29, 0, 0, 0, 2.29, 0, 0.9946, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_mdbku")
animation = &"jump"
autoplay = "default"

[node name="Floor_Check" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor_Check"]
shape = SubResource("SphereShape3D_wck3j")

[node name="Follow_Player" type="Area3D" parent="."]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Follow_Player"]
shape = SubResource("SphereShape3D_w8jcp")

[node name="Death" type="Sprite3D" parent="."]
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, 0, 1.60728, 0)
visible = false
billboard = 2
texture_filter = 0
texture = ExtResource("4_b43mb")

[node name="DeathHuman" type="Sprite3D" parent="."]
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, 0, 0.5878, 0)
visible = false
billboard = 2
texture_filter = 0
texture = ExtResource("5_olupe")

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50146, -0.888739)
stream = ExtResource("6_tx7o8")
volume_db = 3.75

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_g72no")

[node name="Screech" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pqqr8")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_d68hl")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="Player_Detect" to="." method="_on_player_detect_body_entered"]
[connection signal="timeout" from="Jump_Timer" to="." method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="Weapon_Detect" to="." method="_on_weapon_detect_body_entered"]
[connection signal="timeout" from="Weapon_Detect/DmgTimer" to="." method="_on_dmg_timer_timeout"]
[connection signal="body_entered" from="Floor_Check" to="." method="_on_floor_check_body_entered"]
[connection signal="body_entered" from="Follow_Player" to="." method="_on_follow_player_body_entered"]
[connection signal="body_exited" from="Follow_Player" to="." method="_on_follow_player_body_exited"]
